# toy-tt_metal-sdpa

./: .gitignore  CMakeLists.txt  README.md  core_communicate.md  main.cpp  simple_ring_sdpa.cpp  simple_ring_sdpa.hpp  snippet_constant_cb.cpp  tensor.hpp
debug/: classify.py
kernels/: compute_sdpa.cpp  dataflow_reader.cpp  dataflow_writer.cpp
kernels/compute/: compute_common.hpp  compute_sdpa.cpp
kernels/dataflow/: dataflow_reader.cpp  dataflow_writer.cpp  generate_reduce_scaler.hpp
profile/: ai_infra_roofline.py  roofline_metrics.json  roofline_report.md
script/: init.sh
